<resources>
    <string name="app_name">AquaRapid</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_initi">InitiActivity</string>
    <string name="bievenido">Bienvenido a AquaRapid</string>
    <string name="identificate">Identifícate para acceder a nuestro sistema de compra</string>
    <string name="email">Dirección de email</string>
    <string name="passwd">Password</string>
    <string name="Login">Login</string>
    <string name="errorLogin">Email y/o password incorrecto</string>
    <string name="campoobliga">Campo obligatorio</string>
    <string name="registro">Regístrate</string>
    <string name="cif">CIF</string>
    <string name="nombre">Nombre</string>
    <string name="repitepwd">Repite el password</string>
    <string name="registrook">Regitro correcto</string>
    <string name="campomal">Valor del campo incorrecto</string>
    <string name="emailmal">Email incorrecto</string>
    <string name="pwdnomatch">Los passwords no coinciden</string>
    <string name="title_activity_init">Inicio</string>
    <string name="title_activity_register">Registro</string>
    <string name="title_activity_admin">Admin</string>
    <string name="logout">Logout</string>
    <string name="acerca_de">Acerca de...</string>
    <string name="title_activity_acerca">Acerca</string>
    <string name="title_activity_product">Editar producto</string>
    <string name="title_activity_carro">Carrito</string>
    <string name="ver_carro">Ver carrito</string>
    <string name="realizar_compra">Realizar pedido</string>
    <string name="Save">Guardar</string>
</resources>
