<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_initi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.aquarapid.app.views.activity.LoginActivity"
    tools:showIn="@layout/activity_login">


        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/bievenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="normal"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/identificate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/pwd"
        android:hint="@string/passwd"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button

        android:id="@+id/login"
        android:layout_gravity="right"
        android:text="@string/Login"
        android:layout_width="120dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/registro"
        android:layout_gravity="right"
        android:text="@string/registro"
        android:layout_width="120dp"
        android:layout_height="wrap_content" />
</LinearLayout>
